
	- Added sub-sections to server tab with loading indicator

---------- Branch 0.2.x ----------


2008-05-15 - Release Version: 0.0.6.19

	- Bugfix - Expanding requests for Firebug 1.2

2008-05-15 - Release Version: 0.0.6.18

	- Added support for Firebug 1.2

2008-05-15 - Release Version: 0.0.6.17

	- Bugfix - Ensure custom log templates and stylesheets are added correctly at all times

2008-05-14 - Release Version: 0.0.6.16

  - Bugfix - Monitor page loading and trigger request processor for main page and iframes
  - Changed API of Request processor to receive URL and Data as method arguments
	- Bugfix - Display correct URL for console message groups

2008-05-09 - Release Version: 0.0.6.15
	
	- Updated default processor to render exception stacks without wrapping the filenames
	- Added updateKey to install.rdf
	- Updated browser version to support FF3
  - Removed component used to add to User-Agent request header as we can do this directly via httpChannel
  - Removed ?t=xxx from custom processor URL's

2008-04-16 - Release Version: 0.0.6.14
	
	- Bugfix - Re-initialize processor when console panel is not found
	- Bugfix - Add custom stylesheet to console panel on showPanel()

2008-04-16 - Release Version: 0.0.6.10

	- Added feature to allow custom processors to define their own logging templates
	- Moved trace logging template into default processor

2008-04-13 - Release Version: 0.0.6.9

	- Implemented full PHP stack trace logging with variable inspection for fb.php

2008-04-12 - Release Version: 0.0.6.8

  - Bugfix - Parsing of header data in old format
  - Bugfix - Adding and removing of FirePHP/X.X.X in User-Agent request header

2008-04-11 - Release Version: 0.0.6.7

  - New FirePHP client in form of jQuery plugin to be used in Jaxer server environment
	- Bugfix - Console logging with different tabs and windows open and detached firebug window
	- Updated custom code loading verification to allow different hosts for renderer and processor URL's
