@@ -1,10 +1,10 @@
 
-.logRow-firephp-trace {
+.logRow-firephp-exception {
     padding: 0px;
     margin: 0px;
 }
 
-.logRow-firephp-trace > .head {
+.logRow-firephp-exception > .head {
   margin: 0px;
   padding-bottom: 1px;
   padding-top: 2px;
@@ -12,7 +12,7 @@
   background-color: LightYellow;
 }
 
-.logRow-firephp-trace > .head > .title {
+.logRow-firephp-exception > .head > .title {
   cursor: pointer;
   padding-left: 22px;    
   padding-bottom: 0px;
@@ -26,63 +26,63 @@
   text-decoration: underline;
 }
 
-.logRow-firephp-trace > .head > .title:hover {
+.logRow-firephp-exception > .head > .title:hover {
     color: blue;
     text-decoration: none !important;
 }
 
-.logRow-firephp-trace > .head > .title:hover {
+.logRow-firephp-exception > .head > .title:hover {
     text-decoration: underline !important;
     color: blue;
 }
 
-.logRow-firephp-trace.opened {
+.logRow-firephp-exception.opened {
     border-bottom: 1px solid #D7D7D7;
 }
 
 
-.logRow-firephp-trace > .head > .info {
+.logRow-firephp-exception > .head > .info {
     display: none;
     padding-left: 10px;
     margin-top: 2px;
     padding-bottom: 10px;
 }
 
-.logRow-firephp-trace.opened > .head > .info {
+.logRow-firephp-exception.opened > .head > .info {
     display: block;
 }
 
 
-.logRow-firephp-trace.opened > .head > .info > TABLE TBODY TR TD.headerFile {
+.logRow-firephp-exception.opened > .head > .info > TABLE TBODY TR TD.headerFile {
   white-space:nowrap;
   font-weight: bold;
 }
 
-.logRow-firephp-trace.opened > .head > .info > TABLE TBODY TR TD.headerLine {
+.logRow-firephp-exception.opened > .head > .info > TABLE TBODY TR TD.headerLine {
   white-space:nowrap;
   font-weight: bold;
   text-align: right;
 }
-.logRow-firephp-trace.opened > .head > .info > TABLE TBODY TR TD.headerInst {
+.logRow-firephp-exception.opened > .head > .info > TABLE TBODY TR TD.headerInst {
   white-space:nowrap;
   font-weight: bold;
   padding-left: 10px;
   width: 100%;
 }
 
-.logRow-firephp-trace.opened > .head > .info > TABLE TBODY TR TD.cellFile {
+.logRow-firephp-exception.opened > .head > .info > TABLE TBODY TR TD.cellFile {
   white-space:nowrap;
   vertical-align: top;
   border:1px solid #D7D7D7;
   padding-right: 10px;
 }
-.logRow-firephp-trace.opened > .head > .info > TABLE TBODY TR TD.cellLine {
+.logRow-firephp-exception.opened > .head > .info > TABLE TBODY TR TD.cellLine {
   white-space:nowrap;
   vertical-align: top;
   border:1px solid #D7D7D7;
   text-align: right;
 }
-.logRow-firephp-trace.opened > .head > .info > TABLE TBODY TR TD.cellInst {
+.logRow-firephp-exception.opened > .head > .info > TABLE TBODY TR TD.cellInst {
   border:1px solid #D7D7D7;
   vertical-align: top;
   padding-left: 10px;
